--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,49 @@
 
     RewriteEngine On
 
+    # Cache static assets (images, CSS, JS) for 1 year
+    <IfModule mod_expires.c>
+        ExpiresActive On
+
+        # Images
+        ExpiresByType image/jpeg "access plus 1 year"
+        ExpiresByType image/jpg "access plus 1 year"
+        ExpiresByType image/png "access plus 1 year"
+        ExpiresByType image/gif "access plus 1 year"
+        ExpiresByType image/webp "access plus 1 year"
+        ExpiresByType image/svg+xml "access plus 1 year"
+
+        # CSS and JavaScript
+        ExpiresByType text/css "access plus 1 year"
+        ExpiresByType text/javascript "access plus 1 year"
+        ExpiresByType application/javascript "access plus 1 year"
+        ExpiresByType application/x-javascript "access plus 1 year"
+
+        # Fonts
+        ExpiresByType font/woff "access plus 1 year"
+        ExpiresByType font/woff2 "access plus 1 year"
+        ExpiresByType application/font-woff "access plus 1 year"
+        ExpiresByType application/font-woff2 "access plus 1 year"
+    </IfModule>
+
+    # Add Cache-Control headers
+    <IfModule mod_headers.c>
+        # Cache images for 1 year
+        <FilesMatch "\.(jpg|jpeg|png|gif|webp|svg)$">
+            Header set Cache-Control "public, max-age=31536000, immutable"
+        </FilesMatch>
+
+        # Cache CSS and JS for 1 year
+        <FilesMatch "\.(css|js)$">
+            Header set Cache-Control "public, max-age=31536000, immutable"
+        </FilesMatch>
+
+        # Cache fonts for 1 year
+        <FilesMatch "\.(woff|woff2|ttf|otf|eot)$">
+            Header set Cache-Control "public, max-age=31536000, immutable"
+        </FilesMatch>
+    </IfModule>
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
