--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Main Application (Nginx + PHP-FPM + Queue Workers + Reverb)
   app:
@@ -32,8 +30,10 @@ services:
     networks:
       - hoopredict-network
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.hoopredict.rule=Host(`hoopredict.websimas.com`)"
@@ -61,6 +61,12 @@ services:
     networks:
       - hoopredict-network
     command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
   # Redis for Cache, Queue, and Sessions
   redis:
@@ -72,6 +78,12 @@ services:
     networks:
       - hoopredict-network
     command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
 
 volumes:
   db-data:
