fix: allow Nginx to handle the large Inertia.js response headers that contain all your page props

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -30,6 +30,11 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_hide_header X-Powered-By;
         fastcgi_read_timeout 300;
+
+        # Increase buffer sizes for large Inertia.js responses
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 8 128k;
+        fastcgi_busy_buffers_size 256k;
     }
 
     # Deny access to hidden files
