--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-day-picker": "^9.11.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.63.0",
+        "recharts": "^3.4.1",
         "tailwind-merge": "^3.0.1",
         "typescript": "^5.7.2",
         "vite": "^7.0.4",
